@startuml

title __DIT953's Class Diagram__\n

  package com.company.model.car {
    abstract class Car {
    }
  }
  

  package com.company.model.car {
    class CarBuilder {
    }
  }
  

  package com.company.MVC {
    class CarController {
    }
  }
  

  package com.company.model.transporter {
    class CarFerry {
    }
  }
  

  package com.company.model.transporter {
    class CarTransport {
    }
  }
  

  package com.company.MVC {
    class CarView {
    }
  }
  

  package com.company.MVC {
    class DrawPanel {
    }
  }
  

  package com.company.model.transporter {
    class Flatbed {
    }
  }
  

  package com.company.model.movable {
    interface IMovable {
    }
  }
  

  package com.company.model.core {
    interface IPositionable {
    }
  }
  

  package com.company.model.core {
    interface IStorable {
    }
  }
  

  package com.company.model.core {
    interface IStorage {
    }
  }
  

  package com.company.model.core {
    interface ITransportable {
    }
  }
  

  package com.company.model.vehicle {
    interface IVehicleBuilder {
    }
  }
  

  package com.company.model.core {
    class Position {
    }
  }
  

  package com.company.model.repair {
    class RepairShop {
    }
  }
  

  package com.company.model.car {
    class Saab95 {
    }
  }
  

  package com.company.model.transporter {
    class Scania {
    }
  }
  

  package com.company.MVC {
    class State {
    }
  }
  

  package com.company.model.core {
    class Storage {
    }
  }
  

  package com.company.model.core {
    class Tuple {
    }
  }
  

  package com.company.model.vehicle {
    abstract class Vehicle {
    }
  }
  

  package com.company.model.vehicle {
    abstract class VehicleBuilder {
    }
  }
  

  package com.company.model.car {
    class Volvo240 {
    }
  }
  

  Car -up-|> Vehicle
  CarBuilder -up-|> VehicleBuilder
  CarController o-- CarView : frame
  CarFerry -up-|> Vehicle
  CarTransport -up-|> Vehicle
  CarView -up-|> JFrame
  CarView o-- CarController : carC
  CarView o-- DrawPanel : drawPanel
  DrawPanel -up-|> JPanel
  Flatbed -up-|> Storage
  Position -up-|> IPositionable
  Saab95 -up-|> Car
  Scania -up-|> Vehicle
  Storage -up-|> IStorage
  Storage o-- Position : position
  Vehicle -up-|> IMovable
  Vehicle -up-|> IStorable
  Vehicle -up-|> ITransportable
  Vehicle o-- Position : position
  VehicleBuilder -up-|> IVehicleBuilder
  VehicleBuilder o-- Position : position
  Volvo240 -up-|> Car
  State <|-- Tuple


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
